--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   /* colors */
-  --clr-dark: #0B2434;
+  --main-bcg-color: #F5F7FB;
+  --clr-dark: #293264;
   --clr-white: whitesmoke;
   --mainLightTextColor: whitesmoke;
   --mainThemeColor: #a425d0;
@@ -17,12 +18,9 @@
 
   /* font-families */
   /* --ff-serif: "Bellefair", serif; */
-  /* --ff-sans-cond: "Barlow Condensed", sans-serif; */
-  /* --ff-sans-normal: "Barlow", sans-serif; */
+  --ff-Karla: "Karla", sans-serif;
+  --ff-Inter: "Inter", sans-serif;
 
-  /* colors */
-  /* --headerBcgColor: #F55A5A; */
-  /* --lightTextColor: grey; */
 }
 
 @media (min-width: 35em) {
@@ -55,12 +53,17 @@
 }
 
 body {
-  font-family: 'Karla', sans-serif;
+  text-align: center;
+  font-family: var(--ff-Karla);
   font-size: var(--fs-400);
-  background-color: var(--clr-dark);
+  background-color: var(--main-bcg-color);
+  color: var(--clr-dark);
   line-height: 1.5;
   min-height: 100vh;
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* make images easier to work with */
@@ -111,4 +114,3 @@ select {
 .flow>*:where(:not(:first-child)) {
   margin-top: var(--flow-space, 1rem);
 }
-
